fix margin spacing bug in navbar when viewed in firefox

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -180,7 +180,8 @@ nav {
   nav .brand {
     display: flex;
     align-items: center;
-    height: 100%; }
+    height: 100%;
+    margin-right: auto; }
     nav .brand a {
       display: flex;
       align-items: center;
