--- a/app/scss/layout/_navbar.scss
+++ b/app/scss/layout/_navbar.scss
@@ -13,6 +13,7 @@ nav {
     display: flex;
     align-items: center;
     height: 100%;
+    margin-right: auto;
     a {
       display: flex;
       align-items: center;
